fix: UI inconsitency on iPhone SE

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -20,7 +20,7 @@
 
 @media (max-width: 768px) {
     .login-container .login-form {
-        margin: 20% 0;
+        margin: 5% 0;
     }
 }
 
