--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -20,7 +20,7 @@
 
 @media (max-width: 768px) {
     .register-container .register-form {
-        margin: 10% 0;
+        margin: 5% 0;
     }
 }
 
